--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^3.1.2",
+    "@tailwindcss/typography": "^0.5.16",
     "@tsconfig/svelte": "^5.0.4",
     "autoprefixer": "^10.4.18",
     "postcss": "^8.4.35",
